twilio code verification working

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,212 +1,48 @@
 <html>
 <head>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script>
-
-<script type="text/javascript">
-AWS.config.update({
-  region: "us-west-2",
-  // The endpoint should point to the local or remote computer where DynamoDB (downloadable) is running.
-  endpoint: 'http://localhost:8000',
-  /*
-    accessKeyId and secretAccessKey defaults can be used while using the downloadable version of DynamoDB. 
-    For security reasons, do not store AWS Credentials in your files. Use Amazon Cognito instead.
-  */
-  accessKeyId: "fakeMyKeyId",
-  secretAccessKey: "fakeSecretAccessKey"
-});
-
-  /* 
-     Uncomment the following code to configure Amazon Cognito and make sure to 
-     remove the endpoint, accessKeyId and secretAccessKey specified in the code above. 
-     Make sure Cognito is available in the DynamoDB web service region (specified above).
-     Finally, modify the IdentityPoolId and the RoleArn with your own.
-  */
-/*
-AWS.config.credentials = new AWS.CognitoIdentityCredentials({
-IdentityPoolId: "us-west-2:12345678-1ab2-123a-1234-a12345ab12",
-RoleArn: "arn:aws:iam::123456789012:role/dynamocognito"
-});
-*/
-
-var dynamodb = new AWS.DynamoDB();
-var docClient = new AWS.DynamoDB.DocumentClient();
-
-function createUsersTable() {
-
-   var params = {
-        TableName : "Users",
-        KeySchema: [
-            { AttributeName: "phone", KeyType: "HASH"}
-        ],
-        AttributeDefinitions: [       
-            { AttributeName: "phone", AttributeType: "S" }
-        ],
-        ProvisionedThroughput: {       
-            ReadCapacityUnits: 5,
-            WriteCapacityUnits: 5
-        }
-    };
-
-    dynamodb.createTable(params, function(err, data) {
-        if (err) {
-            document.getElementById('textarea').innerHTML = "Unable to create table: " + "\n" + JSON.stringify(err, undefined, 2);
-        } else {
-            document.getElementById('textarea').innerHTML = "Created table: " + "\n" + JSON.stringify(data, undefined, 2);
-        }
-    });
-}
-
-function deleteUsersTable() {
-    var params = {
-        TableName : "Users"
-    };
-
-    dynamodb.deleteTable(params, function(err, data) {
-        if (err) {
-            document.getElementById('textarea').innerHTML = "Unable to delete table: " + "\n" + JSON.stringify(err, undefined, 2);
-        } else {
-            document.getElementById('textarea').innerHTML = "Table deleted.";
-        }
-    });
-}
-
-
-
-function listUsersTables() {
-    var params = {};
-    dynamodb.listTables(params, function(err, data) {
-    if (err){
-        document.getElementById('textarea').innerHTML = "Unable to list tables: " + "\n" + JSON.stringify(err, undefined, 2);
-    }
-    else{
-     document.getElementById('textarea').innerHTML = "List of tables: " + "\n" + JSON.stringify(data, undefined, 2);
-    }
-});
-}
-
-
-function createItem() {
-    var params = {
-        TableName :"Users",
-        Item:{
-            "phone": "+14155552671",
-            "phoneLocalFormat": "4155552671",
-            "phoneCountryCode": "1",
-            "phoneValidationStatus": "0",
-            "phoneValidationCode": "1111",
-
-            "displayName": "John Smith"
-        }
-    };
-    docClient.put(params, function(err, data) {
-        if (err) {
-            document.getElementById('textarea').innerHTML = "Unable to add item: " + "\n" + JSON.stringify(err, undefined, 2);
-        } else {
-            document.getElementById('textarea').innerHTML = "PutItem succeeded: " + "\n" + JSON.stringify(data, undefined, 2);
-        }
-    });
-}
-
-function readItem() {
-    var table = "Users";
-    var phone = "+14155552671";
-
-    var params = {
-        TableName: table,
-        Key:{
-            "phone": phone
-        }
-    };
-    docClient.get(params, function(err, data) {
-        if (err) {
-            document.getElementById('textarea').innerHTML = "Unable to read item: " + "\n" + JSON.stringify(err, undefined, 2);
-        } else {
-            document.getElementById('textarea').innerHTML = "GetItem succeeded: " + "\n" + JSON.stringify(data, undefined, 2);
-        }
-    });
-}
-
-function updateItem() {
-    var table = "Users";
-    var phone = "+14155552671";
-
-    var params = {
-        TableName:table,
-        Key:{
-            "phone": phone
-        },
-        UpdateExpression: "set displayName = :dN, phoneValidationStatus = :pV",
-        ExpressionAttributeValues:{
-            ":dN":"Agent Smith",
-            ":pV":"1"
-        },
-        ReturnValues:"UPDATED_NEW"
-    };
-
-    docClient.update(params, function(err, data) {
-        if (err) {
-            document.getElementById('textarea').innerHTML = "Unable to update item: " + "\n" + JSON.stringify(err, undefined, 2);
-        } else {
-            document.getElementById('textarea').innerHTML = "UpdateItem succeeded: " + "\n" + JSON.stringify(data, undefined, 2);
-        }
-    });
-}
-
-function deleteItem() {
-    var table = "Users";
-    var phone = "+14155552671";
-    
-    var params = {
-        TableName:table,
-        Key:{
-          "phone": phone
-        }
-    };
-    docClient.delete(params, function(err, data) {
-        if (err) {
-            document.getElementById('textarea').innerHTML = "Unable to delete item: " + "\n" + JSON.stringify(err, undefined, 2);
-        } else {
-            document.getElementById('textarea').innerHTML = "DeleteItem succeeded: " + "\n" + JSON.stringify(data, undefined, 2);
-        }
-    });
-}
-
-</script>
+<script src="/js/lib/libphonenumber/libphonenumber-js.min.js"></script>
+<script src="/js/dynamoDB.js"></script>
+<script src="/js/main.js"></script>
+<link href="/css/main.css" rel="stylesheet" type="text/css"/>
 </head>
 
-<body> hello
-<table border = 1>
-    <td>
-        <table border = 1>
-        <caption>Table Operations</caption>
-        <td><input id="createTableButton" type="button" value="Create Table" onclick="createUsersTable();" /></td><td><input id="deleteTableButton" type="button" value="Delete Table" onclick="deleteUsersTable();" /></td><td><input id="listTablebutton" type="button" value="List Tables" onclick="listUsersTables();" /></td>
-        </table>
-    </td>
-    <td>
-        <table border = 1>
-            <caption>CRUD Operations</caption>
-            <td><input id="createItem" type="button" value="Create Item" onclick="createItem();" /></td><td><input id="readItem" type="button" value="Read Item" onclick="readItem();" /></td><td><input id="updateItem" type="button" value="Update Item" onclick="updateItem();" /><td><input id="deleteItem" type="button" value="Delete Item" onclick="deleteItem();" /></td></td>
-        </table>
-    </td>
-    <td>
-        <table border = 1>
-            <caption>Query and Scan</caption>
-            <td><input id="queryData" type="button" value="Query" onclick="queryData();" /></td><td><input id="scanData" type="button" value="Scan" onclick="scanData();" /></td>
-        </table>
-    </td>
-    <td>
-        <table border = 1>
-            <caption>Import JSON</caption>
-            <td><input type="file" id="fileinput" accept='application/json'/></td>
-        </table>
-    </td>
-</table>
+<body> 
 
-<br>
-<textarea readonly id= "textarea" style="width:400px; height:800px"></textarea>
+<div class="ApiConsole Console">
+    <form onsubmit="return requestPhoneVerification()">
+        <input id="CountryPhoneCode" placeholder="country code" oninput="handleCountryCodeChange()">
+        <input id="PhoneNumber" type="tel" placeholder="phone number" oninput="handlePhoneNumberChange()">
+        <input type="submit" value="send SMS">
+    </form> 
+    <form onsubmit="return verifyPhoneToken()">
+        <input id="VerificationToken" placeholder="SMS number">
+        <input type="submit" value="verify">
+    </form>
+    <form onsubmit="return updateSettings()">
+        <input id="DisplayName" placeholder="Display name">
+        <input type="submit" value="update details">
+    </form>
+</div>
 
-<script>
-    //document.getElementById('fileinput').addEventListener('change', processFile, false);
-</script>
+<div class="DatabaseConsole Console">
+    <table border = 1>
+        <td>
+            <table border = 1>
+            <caption>Table Operations</caption>
+            <td><input id="createTableButton" type="button" value="Create Table" onclick="createUsersTable();" /></td><td><input id="deleteTableButton" type="button" value="Delete Table" onclick="deleteUsersTable();" /></td><td><input id="listTablebutton" type="button" value="List Tables" onclick="listUsersTables();" /></td>
+            </table>
+        </td>
+        <td>
+            <table border = 1>
+                <caption>CRUD Operations</caption>
+                <td><input id="createItem" type="button" value="Create Item" onclick="createItem();" /></td><td><input id="readItem" type="button" value="Read Item" onclick="readItem();" /></td><td><input id="updateItem" type="button" value="Update Item" onclick="updateItem();" /><td><input id="deleteItem" type="button" value="Delete Item" onclick="deleteItem();" /></td></td>
+            </table>
+        </td>
+    </table>
+
+    <br>
+    <textarea readonly id= "textarea" style="width:400px; height:800px"></textarea>
+</div>
 </body>
 </html>
