api draft code ready

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -30,13 +30,18 @@
         <td>
             <table border = 1>
             <caption>Table Operations</caption>
-            <td><input id="createTableButton" type="button" value="Create Table" onclick="createUsersTable();" /></td><td><input id="deleteTableButton" type="button" value="Delete Table" onclick="deleteUsersTable();" /></td><td><input id="listTablebutton" type="button" value="List Tables" onclick="listUsersTables();" /></td>
+            <td><input id="createTableButton" type="button" value="Create Table" onclick="createUsersTable();" /></td>
+            <td><input id="deleteTableButton" type="button" value="Delete Table" onclick="deleteUsersTable();" /></td>
+            <td><input id="listTablebutton" type="button" value="List Tables" onclick="listUsersTables();" /></td>
             </table>
         </td>
         <td>
             <table border = 1>
                 <caption>CRUD Operations</caption>
-                <td><input id="createItem" type="button" value="Create Item" onclick="createItem();" /></td><td><input id="readItem" type="button" value="Read Item" onclick="readItem();" /></td><td><input id="updateItem" type="button" value="Update Item" onclick="updateItem();" /><td><input id="deleteItem" type="button" value="Delete Item" onclick="deleteItem();" /></td></td>
+                <td><input id="createNewUser" type="button" value="Create Item" onclick="createNewUser();" /></td>
+                <td><input id="readUser" type="button" value="Read Item" onclick="readUser();" /></td>
+                <td><input id="updateDisplayName" type="button" value="Update Display Name" onclick="updateDisplayName();" /></td>
+                <td><input id="deleteUser" type="button" value="Delete User" onclick="deleteUser();" /></td>
             </table>
         </td>
     </table>
