--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,11 +10,12 @@
 <body>
 
 <div class="Console">
-    <form onsubmit="return createDraftUser()">
+    <form onsubmit="return requestPhoneVerification()">
         <input id="CountryPhoneCode" placeholder="country code" oninput="handleCountryCodeChange()">
         <input id="PhoneNumber" type="tel" placeholder="phone number" oninput="handlePhoneNumberChange()">
         <input type="submit" value="send SMS">
     </form>
+    
     <form onsubmit="return verifyPhoneToken()">
         <input id="VerificationToken" placeholder="SMS number">
         <input type="submit" value="verify">
@@ -23,7 +24,8 @@
         <input id="DisplayName" placeholder="Display name">
         <input type="submit" value="update details">
     </form>
-    <input id="readUser" type="button" value="Read Item" onclick="return readUser();"/>
+    <input id="createDradtUser" type="button" value="Create Draft User" onclick="return createDraftUser();"/>
+    <input id="readUser" type="button" value="Read User" onclick="return readUser();"/>
 </div>
 
 </body>
