Configured to use dynamoose instead of direct DynamoDB connection, formatted API responses, initiated readme

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -28,5 +28,16 @@
     <input id="readUser" type="button" value="Read User" onclick="return readUser();"/>
 </div>
 
+<div class="Console">
+    <table border = 1>
+        <caption>Table Operations</caption>
+        <td><input id="createTableButton" type="button" value="Create Table" onclick="createUsersTable();" /></td>
+        <td><input id="deleteTableButton" type="button" value="Delete Table" onclick="deleteUsersTable();" /></td>
+        <td><input id="listTablebutton" type="button" value="List Tables" onclick="listUsersTables();" /></td>
+    </table>
+
+    <textarea readonly id= "textarea" style="width:400px; height:800px"></textarea>
+</div>
+
 </body>
 </html>
