changed the hash key to uuids for users

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -25,7 +25,7 @@
         <input type="submit" value="update details">
     </form>
     <input id="createDradtUser" type="button" value="Create Draft User" onclick="return createDraftUser();"/>
-    <input id="readUser" type="button" value="Read User" onclick="return readUser();"/>
+    <input id="findUserWithPhone" type="button" value="Find User" onclick="return findUserWithPhone();"/>
 </div>
 
 <div class="Console">
